force-app/main/default/objects/CurrencyMapping__c/CurrencyMapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>scaleMatters Currency Mapping</label>
</CustomObject>