force-app/main/default/objects/CurrencyMapping__c/fields/Currency_Field_3_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Currency_Field_3_Mapping__c</fullName>
    <label>Currency Field 3 Mapping</label>
    <type>TextArea</type>
</CustomField>